remove typos, improved outline sorting, allow supressing validation of missing preferred term in a language

--- a/de.itemis.tooling.terminology.ui/plugin.xml
+++ b/de.itemis.tooling.terminology.ui/plugin.xml
@@ -338,7 +338,7 @@
             categoryId="org.eclipse.ui.category.window"
             description="search in terminologies"
             id="de.itemis.tooling.terminology.SearchCommand"
-            name="Terminology-Search">
+            name="Terminology Search">
       </command>
    </extension>
    <extension
