--- a/de.itemis.tooling.terminology.ui/plugin.xml
+++ b/de.itemis.tooling.terminology.ui/plugin.xml
@@ -280,6 +280,40 @@
             </attribute>
         </markerResolutionGenerator>
     </extension>
+   	<!-- Rename Refactoring -->
+	<extension point="org.eclipse.ui.handlers">
+		<handler 
+			class="de.itemis.tooling.terminology.ui.TerminologyExecutableExtensionFactory:org.eclipse.xtext.ui.refactoring.ui.IRenameElementHandler"
+			commandId="org.eclipse.xtext.ui.refactoring.RenameElement">
+			<activeWhen>
+				<reference
+					definitionId="de.itemis.tooling.terminology.Terminology.Editor.opened">
+				</reference>
+			</activeWhen>
+		</handler>
+	</extension>
+    <extension point="org.eclipse.ui.menus">
+         <menuContribution
+            locationURI="popup:#TextEditorContext?after=group.edit">
+         <command commandId="org.eclipse.xtext.ui.refactoring.RenameElement"
+               style="push">
+            <visibleWhen checkEnabled="false">
+               <reference
+                     definitionId="de.itemis.tooling.terminology.Terminology.Editor.opened">
+               </reference>
+            </visibleWhen>
+         </command>
+      </menuContribution>
+   </extension>
+   <extension point="org.eclipse.ui.preferencePages">
+	    <page
+	        category="de.itemis.tooling.terminology.Terminology"
+	        class="de.itemis.tooling.terminology.ui.TerminologyExecutableExtensionFactory:org.eclipse.xtext.ui.refactoring.ui.RefactoringPreferencePage"
+	        id="de.itemis.tooling.terminology.Terminology.refactoring"
+	        name="Refactoring">
+	        <keywordReference id="de.itemis.tooling.terminology.ui.keyword_Terminology"/>
+	    </page>
+	</extension>
 
   <extension point="org.eclipse.compare.contentViewers">
     <viewer id="de.itemis.tooling.terminology.Terminology.compare.contentViewers"
