--- a/de.itemis.tooling.terminology.csvexport/build.properties
+++ b/de.itemis.tooling.terminology.csvexport/build.properties
@@ -3,4 +3,5 @@ source.. = src/,\
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               plugin.xml
+               plugin.xml,\
+               epl-v10.html
