--- a/de.itemis.tooling.terminology.wikiexport/plugin.xml
+++ b/de.itemis.tooling.terminology.wikiexport/plugin.xml
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
+<!--
+  Copyright (C) 2013-2020 itemis AG (http://www.itemis.eu).
+  
+  This program and the accompanying materials are made
+  available under the terms of the Eclipse Public License 2.0
+  which is available at https://www.eclipse.org/legal/epl-2.0/
+  
+  SPDX-License-Identifier: EPL-2.0
+  
+  Contributors:
+      Alexander Nittka (alex@nittka.de) - initial implementation
+-->
 <plugin>
    <extension
          point="de.itemis.tooling.terminology.generator">
