--- a/de.itemis.tooling.terminology.exporters.feature/pom.xml
+++ b/de.itemis.tooling.terminology.exporters.feature/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>de.itemis.tooling.terminology</groupId>
 		<artifactId>de.itemis.tooling.terminology.parent</artifactId>
-		<version>2.0.0-SNAPSHOT</version>
+		<version>2.0.0</version>
 	</parent>
 	<artifactId>de.itemis.tooling.terminology.exporters.feature</artifactId>
 	<packaging>eclipse-feature</packaging>
