--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.itemis.tooling.terminology</groupId>
-	<version>2.0.0-SNAPSHOT</version>
+	<version>2.0.0</version>
 	<artifactId>de.itemis.tooling.terminology.parent</artifactId>
 	<packaging>pom</packaging>
 
